# digital-museum

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING  OPERATOR_VERIFICATION.md  Package.swift  README.md  flake.nix  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: application.yml  backend.yml
.github/workflows/: application.yml  backend.yml
Sources/EvolvingImpressionist/: App.swift  ContentView.swift  InstallationController.swift  OSCClient.swift  VisualService.swift  WorldState.swift
Sources/EvolvingImpressionistCore/: VisualAPI.swift  VisualService.swift  (+1 more)
backend/: README.md  VERIFICATION.md  painting_world.py  server.py  verify_real.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  OPERATOR_GUIDE.md  OPERATOR_VERIFICATION.md  PHASE_C_VERIFICATION.md  README.md  SHARED_ARTISTIC_STATE.md
scripts/: check-ports.py  endurance.sh  install-runtime.sh  load-env.sh  preflight-installation.sh  render-artistic-vector-assertions.py  render-tidal-input.sh  runtime-common.sh  runtime-state.py  send-world-state.py  start-installation.sh  status-installation.sh  stop-installation.sh  tidal-session.sh  verify-artistic-states.py  verify-tidal-controls.py  verify-tidal-source.sh  verify.sh
tidal/: BootTidalLiveVerification.hs  EvolvingImpressionist.hs  InstallationStartup.scd  LIVE_VERIFICATION.md  LiveWorldStateVerification.scd  VerifyWorldStateBridge.scd  WorldStateBridge.scd
verification/: artistic_state_vectors.json
visual_service/: README.md  VERIFICATION.md  __init__.py  requirements-diffusers.txt  server.py  verify_real.py
(+22 files in other folders)
