[project]
name = "evolving-impressionist-visual-service"
version = "0.1.0"
description = "Local visual generation service for Evolving Impressionist"
readme = "backend/README.md"
requires-python = ">=3.13,<3.14"
dependencies = []

[project.optional-dependencies]
diffusion = [
    "accelerate==1.14.0",
    "diffusers==0.39.0",
    "hf-xet==1.5.2",
    "huggingface-hub==1.24.0",
    "numpy==2.5.1",
    "pillow==12.3.0",
    "psutil==7.2.2",
    "safetensors==0.8.0",
    "torch==2.13.0",
    "transformers==5.14.1",
]

[tool.uv]
package = false
